--- a/cumple_andrea_v2.html
+++ b/cumple_andrea_v2.html
@@ -57,7 +57,7 @@
     function respuestaSi() {
       document.getElementById("content").innerHTML = `
         <h2>Se sabe que eres una burra... bobita 😜</h2>
-        <img src="https://i.imgur.com/B2R8S9A.png" alt="Burro">
+        <img src=https://imgur.com/a/HnwZVM6 alt="Burro">
         <br><br>
         <button onclick="mostrarFinal()">Clickea</button>
       `;
@@ -66,7 +66,7 @@
     function respuestaNo() {
       document.getElementById("content").innerHTML = `
         <h2>Es el día de tu cumpleaños, no el día de los inocentes... ¡tonta! 😂</h2>
-        <img src="https://i.imgur.com/RvDPRlN.png" alt="Burro enojado">
+        <img src=https://imgur.com/a/MnGB7ug alt="Burro enojado">
         <br><br>
         <button onclick="mostrarFinal()">Clickea</button>
       `;
@@ -75,7 +75,7 @@
     function mostrarFinal() {
       document.getElementById("content").innerHTML = `
         <h2>🎉 Feliz cumpleaños mi queridísima Andrea 🎂</h2>
-        <img src="IMAGEN_AQUI" alt="Foto personalizada">
+        <img src=https://imgur.com/a/AZfCIXI alt="Foto personalizada">
         <p>Aquí puedes escribir más cosas bonitas, chistosas o sentimentales para Andrea 🥰</p>
         <br>
         <button onclick="volverInicio()">Volver al inicio</button>
