--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>¿Eres Andrea?</title>
+  <title>¿Eres una burra?</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
       text-align: center;
       background: linear-gradient(135deg, #ffe4ec, #e0c3fc);
-      padding-top: 100px;
+      padding-top: 50px;
       color: #333;
     }
     .box {
@@ -19,6 +19,7 @@
       padding: 40px;
       display: inline-block;
       animation: fadeIn 1s ease;
+      max-width: 90%;
     }
     button {
       margin: 20px;
@@ -34,6 +35,10 @@
     button:hover {
       background: #c039a0;
     }
+    img {
+      max-width: 300px;
+      border-radius: 10px;
+    }
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
@@ -43,27 +48,42 @@
 <body>
 
   <div class="box" id="content">
-    <h2>¿Eres Andrea?</h2>
-    <button onclick="esAndrea()">Sí</button>
-    <button onclick="noEsAndrea()">No</button>
+    <h2>¿Eres una burra?</h2>
+    <button onclick="respuestaSi()">Sí</button>
+    <button onclick="respuestaNo()">No</button>
   </div>
 
   <script>
-    function esAndrea() {
+    function respuestaSi() {
       document.getElementById("content").innerHTML = `
-        <h2>🎉 ¡Feliz cumpleaños, Andrea! 🎂</h2>
-        <p>Espero que tengas un día maravilloso lleno de alegría, amor y pastel 🍰✨</p>
-        <p>¡Te lo mereces todo y más! 💖</p>
+        <h2>Se sabe que eres una burra... bobita 😜</h2>
+        <img src=https://imgur.com/a/HnwZVM6 alt="Burro">
+        <br><br>
+        <button onclick="mostrarFinal()">Clickea</button>
       `;
-      const audio = new Audio("https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3");
-      audio.play();
     }
 
-    function noEsAndrea() {
+    function respuestaNo() {
       document.getElementById("content").innerHTML = `
-        <h2>🚫 ¡Impostor!</h2>
-        <p>¡Solo Andrea puede ver este mensaje especial! 😤</p>
+        <h2>Es el día de tu cumpleaños, no el día de los inocentes... ¡tonta! 😂</h2>
+        <img src=https://imgur.com/a/MnGB7ug alt="Burro enojado">
+        <br><br>
+        <button onclick="mostrarFinal()">Clickea</button>
       `;
+    }
+
+    function mostrarFinal() {
+      document.getElementById("content").innerHTML = `
+        <h2>🎉 Feliz cumpleaños mi queridísima Andrea 🎂</h2>
+        <img src=https://imgur.com/a/AZfCIXI alt="Foto personalizada">
+        <p>Aquí puedes escribir más cosas bonitas, chistosas o sentimentales para Andrea 🥰</p>
+        <br>
+        <button onclick="volverInicio()">Volver al inicio</button>
+      `;
+    }
+
+    function volverInicio() {
+      location.reload();
     }
   </script>
 
