--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     function respuestaSi() {
       document.getElementById("content").innerHTML = `
         <h2>Se sabe que eres una burra... bobita 😜</h2>
-        <img src=https://imgur.com/a/HnwZVM6 alt="Burro">
+        <img src="https://imgur.com/a/HnwZVM6" alt="Burro">
         <br><br>
         <button onclick="mostrarFinal()">Clickea</button>
       `;
@@ -65,8 +65,8 @@
 
     function respuestaNo() {
       document.getElementById("content").innerHTML = `
-        <h2>Es el día de tu cumpleaños, no el día de los inocentes... ¡tonta! 😂</h2>
-        <img src=https://imgur.com/a/MnGB7ug alt="Burro enojado">
+        <h2>Es el día de tu cumpleaños, no el día de los inocentes... tontita 😂</h2>
+        <img src="https://imgur.com/a/MnGB7ug" alt="Burro enojado">
         <br><br>
         <button onclick="mostrarFinal()">Clickea</button>
       `;
