--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     function respuestaSi() {
       document.getElementById("content").innerHTML = `
         <h2>Se sabe que eres una burra... bobita 😜</h2>
-        <img src="https://imgur.com/a/HnwZVM6" alt="imagen,jpg">
+        <img src="https://imgur.com/a/HnwZVM6" alt="imagen.jpg">
         <br><br>
         <button onclick="mostrarFinal()">Clickea</button>
       `;
@@ -75,7 +75,7 @@
     function mostrarFinal() {
       document.getElementById("content").innerHTML = `
         <h2>🎉 Feliz cumpleaños mi queridísima Andrea 🎂</h2>
-        <img src=https://imgur.com/a/AZfCIXI alt="imagen,jpg">
+        <img src="https://imgur.com/a/AZfCIXI" alt="imagen.jpg">
         <p>Aquí puedes escribir más cosas bonitas, chistosas o sentimentales para Andrea 🥰</p>
         <br>
         <button onclick="volverInicio()">Volver al inicio</button>
