--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     function respuestaSi() {
       document.getElementById("content").innerHTML = `
         <h2>Se sabe que eres una burra... bobita 😜</h2>
-        <img src="https://imgur.com/a/HnwZVM6" alt="archivo.jpg">
+        <img src="https://i.imgur.com/AmavATk.jpeg" alt="cumpleaños">
         <br><br>
         <button onclick="mostrarFinal()">Clickea</button>
       `;
@@ -66,7 +66,7 @@
     function respuestaNo() {
       document.getElementById("content").innerHTML = `
         <h2>Es el día de tu cumpleaños, no el día de los inocentes... tontita 😂</h2>
-        <img src="https://imgur.com/a/MnGB7ug" alt="archivo.jpg">
+        <img src="https://i.imgur.com/gTP1nNm.jpeg" alt="mentirosa">
         <br><br>
         <button onclick="mostrarFinal()">Clickea</button>
       `;
@@ -75,7 +75,7 @@
     function mostrarFinal() {
       document.getElementById("content").innerHTML = `
         <h2>🎉 Feliz cumpleaños mi queridísima Andrea 🎂</h2>
-        <img src="https://imgur.com/a/AZfCIXI" alt="archivo.jpg">
+        <img src="https://i.imgur.com/YaGtLHd.jpeg" alt="juntitos">
         <p>Aquí puedes escribir más cosas bonitas, chistosas o sentimentales para Andrea 🥰</p>
         <br>
         <button onclick="volverInicio()">Volver al inicio</button>
