--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       document.getElementById("content").innerHTML = `
         <h2>🎉 Feliz cumpleaños mi queridísima Andrea 🎂</h2>
         <img src="https://i.imgur.com/YaGtLHd.jpeg" alt="juntitos">
-        <p>Aquí puedes escribir más cosas bonitas, chistosas o sentimentales para Andrea 🥰</p>
+        <p> Feliz cumpleaños mi queridisima Andrea, vos sabes que te jodo y trato de ya no irme a la shitXD pero más allá de la joda, quiero que disfrutes tu dia, sonrie, come, canta, baila y simplemente sé feliz. Gracias por ser una linda persona conmigo, siempre voy a querer verte feliz porque es lo te mereces; aunque tenemos tiempo que no nos vemos y que por una u otra cuestión no podemos hablar tanto, siempre tendrás una gran espacio en mi corazón por todo lo que has hecho por mi. Capaz y soy chero X para vos XD pero yo siempre estaré agradecido contigo. Recuerda que yo estoy para ti en todo momento y nunca dudes de eso. Te quiero muchisimo chica, eres una crack, muy capaz de todo y se que vienen cosas bonitas para tu futuro, gracias por tanto <3 🥰</p>
         <br>
         <button onclick="volverInicio()">Volver al inicio</button>
       `;
