--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <script>
     function respuestaSi() {
       document.getElementById("content").innerHTML = `
-        <h2>Se sabe que eres una burra... bobita 😜</h2>
+        <h2>Se sabe que eres una burra... bobita 😆</h2>
         <img src="https://i.imgur.com/AmavATk.jpeg" alt="cumpleaños">
         <br><br>
         <button onclick="mostrarFinal()">Clickea</button>
@@ -65,7 +65,7 @@
 
     function respuestaNo() {
       document.getElementById("content").innerHTML = `
-        <h2>Es el día de tu cumpleaños, no el día de los inocentes... tontita 😂</h2>
+        <h2>Es el día de tu cumpleaños, no el día de los inocentes... tontita 🤪</h2>
         <img src="https://i.imgur.com/gTP1nNm.jpeg" alt="mentirosa">
         <br><br>
         <button onclick="mostrarFinal()">Clickea</button>
@@ -74,9 +74,9 @@
 
     function mostrarFinal() {
       document.getElementById("content").innerHTML = `
-        <h2>🎉 Feliz cumpleaños mi queridísima Andrea 🎂</h2>
+        <h2>🎉 Felicidades chik<3 🎂</h2>
         <img src="https://i.imgur.com/YaGtLHd.jpeg" alt="juntitos">
-        <p> Feliz cumpleaños mi queridisima Andrea, vos sabes que te jodo y trato de ya no irme a la shitXD pero más allá de la joda, quiero que disfrutes tu dia, sonrie, come, canta, baila y simplemente sé feliz. Gracias por ser una linda persona conmigo, siempre voy a querer verte feliz porque es lo te mereces; aunque tenemos tiempo que no nos vemos y que por una u otra cuestión no podemos hablar tanto, siempre tendrás una gran espacio en mi corazón por todo lo que has hecho por mi. Capaz y soy chero X para vos XD pero yo siempre estaré agradecido contigo. Recuerda que yo estoy para ti en todo momento y nunca dudes de eso. Te quiero muchisimo chica, eres una crack, muy capaz de todo y se que vienen cosas bonitas para tu futuro, gracias por tanto <3 🥰</p>
+        <pstyle="text-align: justify; line-height: 1.6; padding: 0 > Feliz cumpleaños mi queridisima Andrea, vos sabes que te jodo y trato de ya no irme a la shitXD pero más allá de la joda, quiero que disfrutes tu dia, sonrie, come, canta, baila y simplemente sé feliz. Gracias por ser una linda persona conmigo, siempre voy a querer verte feliz porque es lo te mereces; aunque tenemos tiempo que no nos vemos y que por una u otra cuestión no podemos hablar tanto, siempre tendrás una gran espacio en mi corazón por todo lo que has hecho por mi. Capaz y soy chero X para vos XD pero yo siempre estaré agradecido contigo. Recuerda que yo estoy para ti en todo momento y nunca dudes de eso. Te quiero muchisimo chica, eres una crack, muy capaz de todo y se que vienen cosas bonitas para tu futuro, gracias por tanto <3 </p>
         <br>
         <button onclick="volverInicio()">Volver al inicio</button>
       `;
