--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <script>
     function respuestaSi() {
       document.getElementById("content").innerHTML = `
-        <h2>Se sabe que eres una burra... bobita 😆</h2>
+        <h2>Se sabe que eres una burra... boba 🫏</h2>
         <img src="https://i.imgur.com/AmavATk.jpeg" alt="cumpleaños">
         <br><br>
         <button onclick="mostrarFinal()">Clickea</button>
@@ -65,7 +65,7 @@
 
     function respuestaNo() {
       document.getElementById("content").innerHTML = `
-        <h2>Es el día de tu cumpleaños, no el día de los inocentes... tontita 🤪</h2>
+        <h2>Es el día de tu cumpleaños, no el día de los inocentes, tonta </h2>
         <img src="https://i.imgur.com/gTP1nNm.jpeg" alt="mentirosa">
         <br><br>
         <button onclick="mostrarFinal()">Clickea</button>
